# ImageHandlerLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: .gitlab-ci.yml
cpp/src/: consoleApplicationImageOperation.cpp  file_operations.h
cpp/src/image_handler/: cutOutAreaHandler.cpp  cutOutAreaHandler.h  removeClosedPoresHandler.h  slice3DImage.h
cpp/src/image_handler/factory/: imageHandlerFactory.cpp  imageHandlerFactory.h
cpp/src/standard_image_lib/: circle.h  standardImage.cpp  twoChannels.h
cpp/src/standard_image_lib/factory/: standardImageCreator.h  standardImageFactory.h
data/handled/: circle.raw  removed_pores.raw  sliced_sourse3.raw  two_channels.raw
data/source/: source.raw  source1.raw  source2.raw  source3.raw
python/: main.py
src/: consoleApplicationImageOperation.h  file_operations.cpp  main.cpp
src/image_handler/: addWallsHandler.cpp  addWallsHandler.h  imageHandler.h  removeClosedPoresHandler.cpp  slice3DImage.cpp
src/image_handler/factory/: imageHandlerCreator.h
src/standard_image_lib/: circle.cpp  sinusoidalChannel.cpp  sinusoidalChannel.h  standardImage.h  twoChannels.cpp
src/standard_image_lib/factory/: standardImageFactory.cpp
